--- a/gallery.html
+++ b/gallery.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Marg’ilon turizm va madaniy meros texnikumi</title>
-  <meta name="description"
-    content="Farg'ona Davlat Universiteti Matematika-Informatika fakulteti, Amaliy matematika va informatika kafedrasi">
-  <meta name="keywords"
-    content="amaliy matematika, matematika, kafedra, Farg'ona davlat universitet, matematika-inforamtika">
+  <title>MARGILAN TECHNICAL SCHOOL OF TOURISM AND CULTURAL HERITAGE</title>
+  <meta name="description" content="Margilan technical school of tourism and cultural heritage">
+  <meta name="keywords" content="Margilan technical, school of tourism, cultural heritage">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
@@ -32,10 +30,9 @@
         <div class="row">
           <div class="col-lg-9 col-md-9 col-sm-9 probootstrap-top-quick-contact-info"
             style="padding-left: 0 !important;">
-            <span><i class="icon-location2"></i>Marg'ilon shahri,
-              Yuksalish MFY, Yangi Marg’ilon ko’chasi, 72a-uy.</span>
+            <span><i class="icon-location2"></i>New Margilan street, 72a, Yuksalish MFY, Margilan city.</span>
             <span><i class="icon-phone2"></i>+99897 335 14 85.</span>
-            <span><i class="icon-mail"></i>info@martourcollege.uz</span>
+            <span><i class="icon-mail"></i>admin@martourcollege.uz</span>
           </div>
 
         </div>
@@ -49,7 +46,7 @@
           </div>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
             aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Almashinuvchi menu</span>
+            <span class="sr-only"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -59,11 +56,11 @@
 
         <div id="navbar-collapse" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Bosh sahifa</a></li>
-            <li><a href="index.html#about">Texnikum haqida</a></li>
-            <li><a href="index.html#directions">Yo'nalishlar</a></li>
-            <li><a href="gallery.html">Rasmlar</a></li>
-            <li><a href="#footer">Bog'lanish</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#directions">Directions</a></li>
+            <li><a href="gallery.html">Photos</a></li>
+            <li><a href="#footer">Connection</a></li>
           </ul>
         </div>
       </div>
@@ -74,7 +71,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-left section-heading probootstrap-animate mb0">
-            <h1 class="mb0">Texnikum suratlari</h1>
+            <h1 class="mb0">Photos</h1>
           </div>
         </div>
       </div>
@@ -172,9 +169,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Biz bilan bo'glanish</h2>
+            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Contact us</h2>
             <a href="#footer" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
-              data-animate-effect="fadeInLeft">Bog'lanish</a>
+              data-animate-effect="fadeInLeft">Connection</a>
           </div>
         </div>
       </div>
@@ -184,11 +181,10 @@
         <div class="row">
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              <h3>Texnikum haqida</h3>
-              <p>Bu tashkilotlar o'zaro raqobatni oshirish maqsadida turizm, madaniyat va xizmat sohalarida yuqori
-                malaka bilan ta'lim
-                berishni maqsad qilganlar. 585 o'rinli yangi binoda joylashgan. </p>
-              <h3>Ijtimoiy tarmoqlarda</h3>
+              <h3>About technical school</h3>
+              <p>These organizations aim to provide high-quality education in the fields of tourism, culture and service
+                in order to
+                increase mutual competition. Located in a new building with 585 seats.</h3>
               <ul class="probootstrap-footer-social">
                 <li><a href="https://t.me/+998973351485"><i class="icon-facebook"></i></a></li>
                 <li><a href="https://t.me/+998973351485"><i class="icon-telegram"></i></a></li>
@@ -198,22 +194,23 @@
           </div>
           <div class="col-md-3 col-md-push-1">
             <div class="probootstrap-footer-widget">
-              <h3>Bog'lamalar</h3>
+              <h3>In social networks</h3>
               <ul>
-                <li><a href="index.html">Bosh sahifa</a></li>
-                <li><a href="index.html#directions">Yo'nalishlar</a></li>
-                <li><a href="gallery.html">Suratlar</a></li>
-                <li><a href="#footer">Bog'lanish</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#directions">Directions</a></li>
+                <li><a href="gallery.html">Photos</a></li>
+                <li><a href="#footer">Connection</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              <h3>Bog'lanish</h3>
+              <h3>Connection</h3>
               <ul class="probootstrap-contact-info">
-                <li><i class="icon-location2"></i> <span>Marg'ilon shahri, Yuksalish MFY, Yangi Marg’ilon ko’chasi,
-                    72a-uy.</span></li>
-                <li><i class="icon-mail"></i><span>info@martourcollege.uz</span></li>
+                <li>
+                  <i class="icon-location2"></i> <span>New Margilan street, 72a, Yuksalish MFY, Margilan city.</span>
+                </li>
+                <li><i class="icon-mail"></i><span>admin@martourcollege.uz</span></li>
                 <li><i class="icon-phone2"></i><span>+99897 335 14 85</span></li>
               </ul>
             </div>
@@ -231,7 +228,7 @@
               <p>&copy; Terminal group</p>
             </div>
             <div class="col-md-4 probootstrap-back-to-top">
-              <p><a href="#" class="js-backtotop">Yuqoriga <i class="icon-arrow-long-up"></i></a></p>
+              <p><a href="#" class="js-backtotop">Top<i class="icon-arrow-long-up"></i></a></p>
             </div>
           </div>
         </div>
